--- a/package.json
+++ b/package.json
@@ -3,22 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+   
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "formik": "^2.2.9",
-    "react-router-dom": "^5.2.0",
-    "styled-components": "^5.3.5",
-    "react-grid-system": "^7.1.1",
-    "react-toastify": "^8.1.0",
-    "react-select": "^5.2.1",
-    "react-hook-form": "^7.22.2",
-    "react-helmet-async": "^1.1.2"
+    "react-router-dom": "^5.2.0"
+
   },
   "scripts": {
     "start": "react-scripts start",
