--- a/package.json
+++ b/package.json
@@ -3,15 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-   
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/styles": "^4.11.5",
+    "@mui/material": "^5.10.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.23.1",
     "axios": "^0.24.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "formik": "^2.2.9",
-    "react-router-dom": "^5.2.0"
-
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-grid-system": "^8.1.6",
+    "react-helmet-async": "^1.3.0",
+    "react-hook-form": "^7.35.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
+    "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
